--- a/link.html
+++ b/link.html
@@ -19,6 +19,8 @@
 <body align="center">
     
     <h1 align="center"> Welcome To Goa Singham </h1>
+    
+        <marquee direction="left to right"><h2>Tu aaya nahi hai Tuje bulaya gaya hai ...</h2> </marquee> 
     <br><br><br><br>
     <li><a href="https://drive.google.com/drive/folders/1xw11ruTOlxHO-MI8mlFF-ALdIYI5Kyyf?usp=share_link">Nodejs</a></li>
         <br><br>
