--- a/link.html
+++ b/link.html
@@ -21,7 +21,7 @@
     <h1 align="center"> Welcome To Goa Singham </h1>
 
     
-    <marquee direction="left to right"><h2>Tu aaya nahi hai Tuje laya gaya hai ...</h2> </marquee>
+    <marquee direction="left to right"><h2>just wait for shingham-2 ...</h2> </marquee>
     <video src="b.mp4" height="400" width="500"></video>
     
     <li><a href="https://drive.google.com/drive/folders/1xw11ruTOlxHO-MI8mlFF-ALdIYI5Kyyf?usp=share_link">Nodejs</a></li>
